# cpp-cmake-project-template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
tests/: CMakeLists.txt  test.cpp
